# python-django-orm-blog

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: pyci.yml
python_django_orm_blog/: settings.py  urls.py
python_django_orm_blog/blog/: models.py
python_django_orm_blog/blog/migrations/: 0002_user_nickname.py  0003_user_last_login_user_password.py
