[project]
name = "python_django_orm_blog"
version = "0.1.0"
description = "A simple Django project that implements a simple blog."
authors = [{name = "Hexlet Team", email = "<info@hexlet.io>"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ipython>=9.13.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
norecursedirs = "__pycache__"
addopts = "--strict-markers"
python_files = "tests.py"
DJANGO_SETTINGS_MODULE = "python_django_orm_blog.settings"
